@startuml
!pragma layout smetana

' ======================
' Domain Entities
' ======================

class User {
  - userID: String
  - name: String
  - email: String
  - password: String
  + getters()
  + setters()
}

class Post {
  - postID: String
  - content: String
  - mediaURL: String
  - createdAt: Instant
  - updatedAt: Instant
  + getters()
  + setters()
}

class Comment {
  - commentID: String
  - userID: String
  - text: String
  - timestamp: DateTime
  + getters()
  + setters()
}

class Like {
  - likeID: String
  - userID: String
  - timestamp: DateTime
  + getters()
  + setters()
}

class Chat {
  - chatID: int
  + getters()
  + setters()
}

class Message {
  - messageID: String
  - senderID: int
  - receiverID: int
  - content: String
  - timestamp: DateTime
  + getters()
  + setters()
}

class Feed {
    - userID: String
    + getters()
    + setters()
}

' ======================
' Relationships Between Entities
' ======================

' A User creates many Posts; each Post belongs to one User.
User "1" --> "0..*" Post : creates

' A User writes many Comments; each Comment is written by one User and on one Post.
User "1" --> "0..*" Comment : writes
Comment "1" --> "1" Post : on

' A User gives many Likes; each Like is by one User on one Post.
User "1" --> "0..*" Like : gives
Like "1" --> "1" Post : on

' A Chat involves two Users (simplified for now as a direct association).
Chat "1" --> "2" User : participants

' A Chat contains many Messages; each Message belongs to one Chat.
Chat "1" --> "0..*" Message : contains

Feed "1" --> "0..*" Post: contains

@enduml
